--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   user-select: none;
+  -webkit-user-drag: none;
   margin: 0;
   padding: 0;
 }
@@ -7,6 +8,7 @@
 h1 {
   text-align: center;
   font-size: 3.5rem;
+  margin-bottom: 0.12em;
 }
 
 .container {
