--- a/style.css
+++ b/style.css
@@ -22,16 +22,23 @@ h1 {
   grid-gap: 0.7em; /* 5px */
 }
 
-.container .img-box {
+.img-box {
   width: 100%;
   overflow: hidden;
   position: relative;
 }
 
-.container .img-box img {
+img {
   width: 100%;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  transition: filter ease 1s 0s;
+}
+
+img.focus {
+  transform: translate(-50%, -50%);
+  transition: filter ease 1s 0s;
+  filter: brightness(40%) blur(0.3em);
 }
