--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ img.focus {
   filter: brightness(40%) blur(0.3em);
 }
 
+/* modal */
+
 .modal {
   display: block; /* default none */
   position: fixed;
@@ -56,24 +58,48 @@ img.focus {
 }
 
 .modal-content {
+  position: fixed;
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%; /* Could be more or less, depending on screen size */
+  left: 0;
+  right: 0;
+  margin: 6% auto;
+  width: 70%;
+  height: 70%;
+  padding: 1.4em;
+  border: 1px solid #aaa;
+  opacity: 90%;
 }
 
-/* The Close Button */
 .modal-close {
+  line-height: 0.6;
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 2em;
   font-weight: bold;
 }
 
-.modal-close:hover,
-.modal-close:focus {
+.modal-close:hover {
+  cursor: pointer;
   color: black;
   text-decoration: none;
+}
+/* // modal */
+
+.play-btn {
   cursor: pointer;
+}
+
+.play-btn:hover {
+  transform: scale(1.5);
+}
+
+.volume-control {
+  cursor: pointer;
+}
+
+.volume-slider {
+}
+
+.volume-percentage {
+  background: coral;
 }
