--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,21 @@
   padding: 0;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  background: linear-gradient(
+    180deg,
+    rgba(246, 235, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 15%,
+    rgba(255, 255, 255, 1) 85%,
+    rgba(238, 252, 255, 1) 100%
+  );
+}
+
 h1 {
   text-align: center;
   font-size: 3.5rem;
