--- a/css/audio_control.css
+++ b/css/audio_control.css
@@ -1,20 +1,26 @@
+wave {
+  width: 100%;
+}
+
 .audio-player {
-  margin: 7em auto;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .waveform {
   cursor: pointer;
-}
-
-wave {
-  width: 100%;
+  margin: 0% 5em;
 }
 
 .audio-control {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 4em auto;
+  margin: 2em auto;
 }
 
 .audio-player .play-btn {
